--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,14 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-@keyframes scroll-up {
+@-webkit-keyframes scroll-up {
   0% {
-    transform: translateY(100%);
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
   }
   100% {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+@keyframes scroll-up {
+  0% {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 .animate-scroll-up {
-  animation: scroll-up 5s ease-in-out;
+  -webkit-animation: scroll-up 5s ease-in-out;
+          animation: scroll-up 5s ease-in-out;
 }
